--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "crypto-js": "^3.1.9-1",
     "customize-cra": "^0.5.0",
     "history": "^4.9.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-app-rewire-less": "^2.1.3",
