--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "antd": "^3.22.0",
     "antd-theme-generator": "^1.1.7",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
     "crypto-js": "^3.1.9-1",
     "customize-cra": "^0.5.0",
@@ -19,6 +20,7 @@
     "react-dom": "^16.9.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.0",
+    "react-resizable": "^1.8.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
