--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd-theme-generator": "^1.1.7",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
+    "braft-editor": "^2.3.8",
     "crypto-js": "^3.1.9-1",
     "customize-cra": "^0.5.0",
     "history": "^4.9.0",
