--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.9.0",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^2.1.3",
+    "react-beautiful-dnd": "^12.0.0",
     "react-color": "^2.17.3",
     "react-dom": "^16.9.0",
     "react-loadable": "^5.5.0",
