--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "braft-editor": "^2.3.8",
     "crypto-js": "^3.1.9-1",
     "customize-cra": "^0.5.0",
+    "gsap": "^3.0.1",
     "history": "^4.9.0",
     "moment": "^2.24.0",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-app-rewire-less": "^2.1.3",
